<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:id="@+id/bottom_order"
        android:title="@string/order"
        android:icon="@drawable/order"
        />
    <item
    android:id="@+id/bottom_search"
    android:title="@string/search"
    android:icon="@drawable/search"
    />
    <item
        android:id="@+id/bottom_offer"
        android:title="@string/offer"
        android:icon="@drawable/baseline_local_offer_24"

        />

    <item
        android:id="@+id/bottom_cart"
        android:title="@string/cart"
        android:icon="@drawable/baseline_add_shopping_cart_24"/>

</menu>