<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile1"
            android:title="@string/profile"
            android:icon="@drawable/baseline_person_24"/>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Feedback"
            android:title="Feedback"
            android:icon="@drawable/baseline_feedback_24"/>
        <item
            android:id="@+id/nav_Terms"
            android:title="@string/terms_and_condition"
            android:icon="@drawable/terms"/>
        <item
            android:id="@+id/nav_Contact_Us"
            android:title="@string/contact_us"
            android:icon="@drawable/baseline_contact_us_24"/>
    </group>
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/share"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

</menu>