<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:gravity="top"
    android:padding="16dp"
    android:background="@drawable/waves"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="86dp"
        android:layout_height="89dp"
        android:src="@drawable/profiles"
        android:contentDescription="@string/userimage" />

    <TextView
        android:id="@+id/userNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="start"
        android:text="@string/Mohit_Lengure"
        android:textColor="#E64A19"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/emailTxt"
        android:layout_height="41dp"
        android:layout_gravity="start"
        android:text="@string/mohitlengure_gmail_com"
        android:textColor="#E64A19"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>